  the ADF is selected, but otherwise hidden.
* + support for the new API in ImageMagick 7 for unsharp mask
* For single-sided documents, hide rotate facing/reverse/both side dropdown.
* + missing documentation for Edit/Properties
* Don't reapply scan settings if value is within tolerance.
  Closes bug #287 (Reload recursion limit (5050) exceeded)


1.8.8 (29.10.2017):

* Filter out 1 and 2 digit integers from tool warnings.
  Show original message, not filtered message.
  Closes bug #281 (Error processing with Tesserarct: Detected 99 Diacritics)
* Add option to profile only after successfully applying it
* Fix default value for unpaper script direction.
* Fix race condition updating widgets before they can be created after cycling
  device handle.
* Fix 16-bit PNM parsing
* Fix Perl warning about redundant argument in sprintf
* Update to Hungarian translation (thanks to csola)


1.8.7 (22.09.2017):

* + units to scan and edit paper dialogues.
* - unsupported libsane-perl offered as Frontend choice
  Thanks to Chris Mayo for the patch. Closes merge request #19
* Fixed support for Poppler (pdftops) as postscript backend.
  Thanks to Chris Mayo for the patch. Closes merge request #18
* - Reload recursion limit in Edit/Preferences
  Set reload recursion limit as triangular number of number of scan options.
  i.e. if there are 5 scan options, the recursion limit is 5+4+3+2+1=15
  Closes bug #275 (reload recursion limit)
* Fixed crash with scanimage frontend due to empty cache
* Ghost save button, rather than hiding save dialogue if all pages removed.
  Closes bug #253 (Save dialoque does not stay open)
* Fixed bug causing profile dropdown to be cleared after setting profile
* Filter out integers from tool warnings, analogous to the hex warnings from
  unpaper.
* Fixed visibility of options in save dialogue (again).
* Right mouse click in thumbnail panel makes the page range (e.g. in save
  dialogue) default to "selected".